--- a/style.css
+++ b/style.css
@@ -75,14 +75,28 @@ html {
     left: 0;
     margin-left: auto;
     margin-right: auto;
-    opacity: 0;
-    padding: 2px 10px 2px 10px;
+    opacity: 1;
+    padding: 8px;
     position: absolute;
     right: 0;
     text-align: center;
     top: 1%;
-    width: 280px;
     z-index: 2;
+    width: 25vw;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#input-container {
+    display: flex; 
+    align-items: center;
+    width: 100%;
+}
+
+label {
+    margin-right: 10px;
 }
 
 #name-input {
@@ -91,42 +105,33 @@ html {
     color: black;
     height: 2em;
     font-size: 12px;
-    margin: 5px;
-    padding: 2px 10px 2px 10px;
-    width: 65%;
+    padding: 2px 10px;
+    flex: 1;
 }
 
-#name-input:hover {
-    cursor: text;
+#button-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 8px;
 }
 
-#show-notable-burials {
-    background: var(--general-background);
-    border: var(--general-border);
-    border-radius: 10px;
-    font-size: 12pt;
-    height: 2em;
-    margin: 5px;
-    padding: 2px 5px 2px 5px;
-    transition: background 0.5s;
-}
-
-#show-notable-burials:hover {
-    background: var(--button-hover-color);
-    cursor: pointer;
-}
-
+#show-notable-burials,
 #submit-search-form {
     background: var(--general-background);
     border: var(--general-border);
     border-radius: 10px;
     font-size: 12pt;
     height: 2em;
-    margin: 5px;
-    padding: 2px 5px 2px 5px;
+    margin-left: 4px;
+    margin-right: 4px;
+    padding: 2px 5px;
     transition: background 0.5s;
+    flex: 1;
+    font-size: 12px;
 }
 
+#show-notable-burials:hover,
 #submit-search-form:hover {
     background: var(--button-hover-color);
     cursor: pointer;
@@ -138,12 +143,11 @@ html {
     border-radius: 10px;
     display: none;
     left: 10px;    
-    max-height: 80%;
-    max-width: 30%;
-    min-width: 20%;
+    width: 25vw;
+    height: 25vh;
     overflow-y: auto;
     position: absolute;
-    top: 10px;
+    bottom: 10px;
     z-index: 2;
 }
 
@@ -226,13 +230,17 @@ html {
     border-radius: 10px;
     display: none;
     left: 10px;
-    padding: 2px 5px 2px 5px;
+    padding: 2px 5px;
     position: absolute;
-    top: 10px;
-    min-width: 10%;
-    width: max-content;
+    bottom: 10px;
+    max-width: 25vw;  
+    max-height: 25vh; 
+    width: auto;
+    height: auto; 
+    overflow-y: auto;
     z-index: 2;
 }
+
 
 #plot-hide {
     background: var(--general-background);
@@ -260,9 +268,11 @@ html {
 }
 
 #plot-inhabitants {
-    max-height: 300px; /* Adjust this value based on screen size */
+    height: calc(25vh - 60px);
     overflow-y: auto;
-    padding-right: 10px; /* Prevents text from touching the scrollbar */
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .plot-inhabitant {
