--- a/style.css
+++ b/style.css
@@ -87,10 +87,11 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 250px;
 }
 
 #input-container {
-    display: flex; 
+    display: flex;
     align-items: center;
     width: 100%;
 }
@@ -106,6 +107,7 @@ label {
     height: 2em;
     font-size: 12px;
     padding: 2px 10px;
+    width: auto;
     flex: 1;
 }
 
